package HFDP.Decorator.Code;

public abstract class CondimentDecorator extends Beverage{
    public abstract String getDescription();
}
